Allow add track to playlist in search result

--- a/index.html
+++ b/index.html
@@ -50,3 +50,5 @@ public class Main {
 # Code Update 1760952548-28605
 
 # Additional Implementation 1760952548
+
+# Additional Implementation 1760952548
